--- a/DinnerSpinner/_Imports.razor
+++ b/DinnerSpinner/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using DinnerSpinner
-@using DinnerSpinner.Shared
+@using DinnerSpinner.Client
+@using DinnerSpinner.Client.Shared
